--- a/index.html
+++ b/index.html
@@ -160,16 +160,19 @@
          var Al_Anbar;
          var Arbil;
          var Dihok;
+         
+         
+         var sublayer2 = layers[1].getSubLayer(1);
 
 
-        var layerSource = {
-        user_name: 'aceb694',
-        type: 'cartodb',
-        sublayers: [{
-             sql: "SELECT * FROM sulaymaniyah_anbar_erbil_duhok_ver3", // African countries
-             cartocss: '#sulaymaniyah_anbar_erbil_duhok_ver3{polygon-fill:#FF6600;polygon-opacity:0.7;line-color:#FFF;line-width:1;line-opacity:1;}'
-         }]
-      }
+      //   var layerSource = {
+      //   user_name: 'aceb694',
+      //   type: 'cartodb',
+      //   sublayers: [{
+      //       sql: "SELECT * FROM sulaymaniyah_anbar_erbil_duhok_ver3", // African countries
+      //       cartocss: '#sulaymaniyah_anbar_erbil_duhok_ver3{polygon-fill:#FF6600;polygon-opacity:0.7;line-color:#FFF;line-width:1;line-opacity:1;}'
+      //   }]
+      // }
 
          /*------------------------------END: DECLARE GLOBAL VARIABLES------------------------------------------------------------*/
 
