--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         });
     });
     
-     var sublayer2 = layers[1].getSubLayer(1);
+    // var sublayer2 = layers[1].getSubLayer(1);
 
 /*-------------------------------END: LOAD CARTODB MAP------------------------------------------------------------*/
 
