--- a/index.html
+++ b/index.html
@@ -227,10 +227,13 @@
         cartodb.createVis('map', 'https://aceb694.cartodb.com/api/v2/viz/dbe29aca-e6dc-11e4-b5d2-0e0c41326911/viz.json',
         {
             cartodb_logo: false
-        });
+        }).done(function(vis,layers)
+        {
+            var sublayer2 = layers[1].getSubLayer(1);
+        })
     });
     
-    // var sublayer2 = layers[1].getSubLayer(1);
+    // 
 
 /*-------------------------------END: LOAD CARTODB MAP------------------------------------------------------------*/
 
