--- a/index.html
+++ b/index.html
@@ -161,15 +161,20 @@
          var Arbil;
          var Dihok;
 
+         var RefugeePopulationLayer;
 
-        var layerSource = {
-        user_name: 'aceb694',
-        type: 'cartodb',
-        sublayers: [{
-             sql: "SELECT * FROM sulaymaniyah_anbar_erbil_duhok_ver3", // African countries
-             cartocss: '#sulaymaniyah_anbar_erbil_duhok_ver3{polygon-fill:#FF6600;polygon-opacity:0.7;line-color:#FFF;line-width:1;line-opacity:1;}'
-         }]
-      }
+
+
+
+
+      //   var layerSource = {
+      //   user_name: 'aceb694',
+      //   type: 'cartodb',
+      //   sublayers: [{
+      //       sql: "SELECT * FROM sulaymaniyah_anbar_erbil_duhok_ver3", // African countries
+      //       cartocss: '#sulaymaniyah_anbar_erbil_duhok_ver3{polygon-fill:#FF6600;polygon-opacity:0.7;line-color:#FFF;line-width:1;line-opacity:1;}'
+      //   }]
+      // }
 
          /*------------------------------END: DECLARE GLOBAL VARIABLES------------------------------------------------------------*/
 
@@ -223,9 +228,23 @@
     {
         cartodb.createVis('map', 'https://aceb694.cartodb.com/api/v2/viz/dbe29aca-e6dc-11e4-b5d2-0e0c41326911/viz.json',
         {
-            cartodb_logo: false
-        });
+            cartodb_logo: false,
+            legends: true
+        }).done(function(vis,layers)
+        {
+            // alert("Layers has " + layers.length + " layers.");
+
+            RefugeePopulationLayer = layers[1].getSubLayer(0);
+
+            // alert("Layers has " + layers[1].getSubLayerCount() + " sublayers.");
+
+
+
+
+        })
     });
+
+    //
 
 /*-------------------------------END: LOAD CARTODB MAP------------------------------------------------------------*/
 
@@ -261,22 +280,107 @@
           console.log('min value: ' + minMonth + ', max value: ' + maxMonth);
           //console.log(JSONfromCartoDB.rows[0].governorate);
 
-          var As_Sulaymaniyah_difference = As_Sulaymaniyah.rows[maxMonth].monthly_pop_avg_int - As_Sulaymaniyah.rows[minMonth].monthly_pop_avg_int;
+          // var GovernorateDifference = new Array(4,3,5,'d');
+            // var difference = {
+            //   governorate: 'Al-Anbar',
+            //   difference: Al_Anbar.rows[maxMonth].monthly_pop_avg_int - Al_Anbar.rows[minMonth].monthly_pop_avg_int
+            // },
+            // var difference = {
+            //   governorate: 'As-Sulaymaniyah',
+            //   difference: As_Sulaymaniyah.rows[maxMonth].monthly_pop_avg_int - As_Sulaymaniyah.rows[minMonth].monthly_pop_avg_int
+            // },
+            // var difference = {
+            //   governorate: 'Arbil',
+            //   difference: Arbil.rows[maxMonth].monthly_pop_avg_int - Arbil.rows[minMonth].monthly_pop_avg_int
+            // });
 
-          var Al_Anbar_difference = Al_Anbar.rows[maxMonth].monthly_pop_avg_int - Al_Anbar.rows[minMonth].monthly_pop_avg_int;
+          // var GovernorateDifference = {
+          //     Al_Anbar_difference: Al_Anbar.rows[maxMonth].monthly_pop_avg_int - Al_Anbar.rows[minMonth].monthly_pop_avg_int,
+          //     As_Sulaymaniyah_difference: As_Sulaymaniyah.rows[maxMonth].monthly_pop_avg_int - As_Sulaymaniyah.rows[minMonth].monthly_pop_avg_int,
+          //     Arbil_difference: Arbil.rows[maxMonth].monthly_pop_avg_int - Arbil.rows[minMonth].monthly_pop_avg_int,
+          //     Dihok_difference: Dihok.rows[maxMonth].monthly_pop_avg_int - Dihok.rows[minMonth].monthly_pop_avg_int};
 
-          var Arbil_difference = Arbil.rows[maxMonth].monthly_pop_avg_int - Arbil.rows[minMonth].monthly_pop_avg_int;
 
-          var Dihok_difference = Dihok.rows[maxMonth].monthly_pop_avg_int - Dihok.rows[minMonth].monthly_pop_avg_int;
+          var AvgMonthlyRefugeePopDiff = [
+            {
+              governorate: "Al-Anbar",
+              diffInMonths: Al_Anbar.rows[maxMonth].monthly_pop_avg_int - Al_Anbar.rows[minMonth].monthly_pop_avg_int,
+            },
+            {
+              governorate: "As-Sulaymaniyah",
+              diffInMonths: As_Sulaymaniyah.rows[maxMonth].monthly_pop_avg_int - As_Sulaymaniyah.rows[minMonth].monthly_pop_avg_int
+            },
+            {
+              governorate: "Arbil",
+              diffInMonths: Arbil.rows[maxMonth].monthly_pop_avg_int - Arbil.rows[minMonth].monthly_pop_avg_int
+            },
+            {
+              governorate: "Dihok",
+              diffInMonths: Dihok.rows[maxMonth].monthly_pop_avg_int - Dihok.rows[minMonth].monthly_pop_avg_int
+            }];
 
-          console.log(As_Sulaymaniyah_difference);
-          console.log(Al_Anbar_difference);
-          console.log(Arbil_difference);
-          console.log(Dihok_difference);
+
+
+            for(var i =0; i<4; i++)
+            {
+                if(AvgMonthlyRefugeePopDiff[i].diffInMonths <= -3001)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#00aaff';
+                else if (AvgMonthlyRefugeePopDiff[i].diffInMonths <= -2001)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#00bbff';
+                else if(AvgMonthlyRefugeePopDiff[i].diffInMonths <= -1001)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#00ccff';
+                else if(AvgMonthlyRefugeePopDiff[i].diffInMonths <= -1)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#00ddff';
+                else if(AvgMonthlyRefugeePopDiff[i].diffInMonths == 0)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#ffffff';
+                else if(AvgMonthlyRefugeePopDiff[i].diffInMonths <= 9999)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#6f0000';
+                else if(AvgMonthlyRefugeePopDiff[i].diffInMonths <= 24999)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#5c0000';
+                else if(AvgMonthlyRefugeePopDiff[i].diffInMonths <= 39999)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#490000';
+                else if(AvgMonthlyRefugeePopDiff[i].diffInMonths <= 54999)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#360000';
+                else if(AvgMonthlyRefugeePopDiff[i].diffInMonths <= 62172)
+                    AvgMonthlyRefugeePopDiff[i].hexColor = '#000000';
+            }
+
+          RefugeePopulationLayer.setCartoCSS("#sulaymaniyah_anbar_erbil_duhok_ver3 [governorate= '" + AvgMonthlyRefugeePopDiff[0].governorate + "']{ polygon-fill: " + AvgMonthlyRefugeePopDiff[0].hexColor + "; } [governorate='" + AvgMonthlyRefugeePopDiff[1].governorate + "'] { polygon-fill: " + AvgMonthlyRefugeePopDiff[1].hexColor + "; } [governorate= '" + AvgMonthlyRefugeePopDiff[2].governorate + "']{ polygon-fill: " + AvgMonthlyRefugeePopDiff[2].hexColor + ";} [governorate= '" + AvgMonthlyRefugeePopDiff[3].governorate + "']{ polygon-fill: " + AvgMonthlyRefugeePopDiff[3].hexColor + ";}"
+          );
+
+// -3000 to -2001 #00bbff
+// -2000 to -1001 #00ccff
+// -1000 to -1 #00ddff
+// 0 #ffffff
+// 1 to 9,999  #6f0000
+// 10,000 to 24,999 #5c0000
+// 25,000 to 39,999 #490000
+// 40,000 to 54,999 #360000
+// 55,000 to 62,172 #000000
+
+
+
+
+          // if(Arbil_difference>=0)
+          //   RefugeePopulationLayer.setCartoCSS("#sulaymaniyah_anbar_erbil_duhok_ver3 [governorate='Arbil']{ polygon-fill: #3E7BB6; }");
+          // else
+          //   RefugeePopulationLayer.setCartoCSS("#sulaymaniyah_anbar_erbil_duhok_ver3 [governorate='Arbil']{ polygon-fill: #870005; }");
+
+
+            // set({'cartocss': '#layer {...}' })
+
+            // alert("Sublayer CSS is " + RefugeePopulationLayer.getCartoCSS());
+            // alert("Sublayer SQL is " + RefugeePopulationLayer.getSQL());
+
+
+
+            // RefugeePopulationLayer.setCartoCSS("#sulaymaniyah_anbar_erbil_duhok_ver3 [governorate='As-Sulaymaniyah']{ polygon-fill: #3E7BB6; } [governorate='Arbil'] { polygon-fill: #870005; }");
 
       });
 
 /*-------------------------------END: EVENT HANDLERS------------------------------------------------------------*/
+
+
 
 
     </script>
