--- a/index.html
+++ b/index.html
@@ -77,11 +77,7 @@
 
       #legend
       {
-         display:block;
-        text-decoration:none;
-        text-align:center;
-        font: normal 13px "Helvetica",Arial;
-        color: #858585;
+        bottom: 100px;
 
       }
 
