added second legend

--- a/index.html
+++ b/index.html
@@ -264,12 +264,12 @@
                   $('#legendIncrease').append(densityLegendIncrease.render().el);
 
 
-            // var densityLegendDecrease = new cdb.geo.ui.Legend.Density({
-            //     title: "Refugee Population Decrease",
-            //     left: "0", right: "10", colors: [ "#58A062", "#F07971", "#54BFDE", "#9BC562", "#FABB5C" ]
-            //   });
+            var densityLegendDecrease = new cdb.geo.ui.Legend.Density({
+                title: "Refugee Population Decrease",
+                left: "0", right: "10", colors: [ "#58A062", "#F07971", "#54BFDE", "#9BC562", "#FABB5C" ]
+              });
 
-            //     densityLegendDecrease.addTo("#legendIncrease");
+                 $('#legendDecrease').append(densityLegendDecrease.render().el);
 
 
 
