added difference value to table

--- a/index_backup.html
+++ b/index_backup.html
@@ -168,7 +168,7 @@ bullet{
 
 
     <div id="title">
-      2013 Syrian Refugees Not Residing in Camps within Iraq Governorates of Dihok, Arbil, As-Sulaymaniyah and Al-Anbar
+      Syrian Refugees Not Residing in Camps within Iraq Governorates of Dihok, Arbil, As-Sulaymaniyah and Al-Anbar
     </div>
 
     <div id="sub_heading">
@@ -328,7 +328,7 @@ bullet{
 
 
 
-        cartodb.createVis('map', 'https://aceb694.cartodb.com/api/v2/viz/84796788-fd7e-11e4-a92a-0e9d821ea90d/viz.json',
+        cartodb.createVis('map', 'https://aceb694.cartodb.com/api/v2/viz/dbe29aca-e6dc-11e4-b5d2-0e0c41326911/viz.json',
         {
             cartodb_logo: false,
             legends: false,
