changed some wording

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ bullet{
     </div>
 
     <div id="sub_heading">
-    Move the slider to see the population increase or decrease between the two months.
+    Move the slider to see each governorate's population increase or decrease between the two months. Click on the black points to read about events occuring during the two months selected.
     </div>
 
 
